<resources>
    <string name="app_name">EasyAccount</string>
    <string name="app_CN_name">简易账本</string>
    <string name="edit_record">记一笔</string>
    <string name="moth_out">本月支出</string>
    <string name="moth_in">本月收入</string>
    <string name="budget_remain">预算剩余</string>
    <string name="set_budget">设置预算</string>
    <string name="see_graph">查看图表分析</string>
    <string name="add_remark">添加备注</string>
    <string name="remark">备注</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="history_record">账单记录</string>
    <string name="account_info">账单详情</string>
    <string name="please_input_time">请输入时间（24小时制）</string>
    <string name="please_search_info">请输入搜索信息</string>
    <string name="data_empty">数据为空，无相关记录</string>
    //app详情页面
    <string name="about_appInfo">应用信息</string>
    <string name="about_version">版本</string>
    <string name="about_1">1.0</string>
    <string name="about_app">关于应用</string>
    <string name="about_sentence1">这是一个可以用来练习Activity，Fragment，安卓内置数据库SQLite等内容的小项目~</string>
    <string name="about_developer">开发者</string>
    <string name="about_me">关于我</string>
    <string name="about_location">坐标广州，某本科大学生</string>
    <string name="about_email">电子邮箱</string>
    <string name="about_myEmail">我的邮箱：xxx@outlook.com</string>
    <string name="about_sourceCode">源代码</string>
    <string name="about_codeLink">我的代码托管在：https://github.com/AlenWangmx/MyFirst_APP</string>
    <string name="about_CanKao">项目参考：https://www.bilibili.com/video/BV1Ey4y1k73N</string>
    <string name="about_CodeCanKao">源代码参考：https://gitee.com/happyanimee/simple-bookkeeping</string>

    <string name="history_info">本月账单记录</string>
    <string name="clear_all">清空所有记录</string>

</resources>