<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/grey_f3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_menu_btn_about"
            style="@style/dialog_menu"
            android:drawableTop="@mipmap/it_guanyu"
            android:text="@string/about"/>
        <Button
            android:id="@+id/dialog_menu_btn_setting"
            style="@style/dialog_menu"
            android:drawableTop="@mipmap/it_shezhi"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/setting"/>
        <Button
            android:id="@+id/dialog_menu_btn_record"
            style="@style/dialog_menu"
            android:drawableTop="@mipmap/it_jilu"
            android:text="@string/history_record"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/dialog_menu_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ih_error"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

</LinearLayout>